<resources>
    <string name="app_name">Easy Book</string>
    <string name="text_bottom_on_aut_activity">Войдите с свою учётную запись</string>
    <string name="buttonSignIn">Войти</string>
    <string name="buttonRegister">Зарегестрироваться</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="my_organization">"Мои организации"</string>
    <string name="my_schedule">"Мои расписания"</string>
    <string name="my_appointment">"Мои записи"</string>
    <string name="profile">"Профиль"</string>
    <string name="logout">"Выйти"</string>
</resources>